Update Loretta an Karlo bio

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -138,7 +138,7 @@
               %h3
                 = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink"
               .handle @LorettaExercism
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              %p Loretta is the Head of Partnerships and Fundraising, with a track record of successful strategic and operational delivery across complex charities, including Cancer Research UK, UNICEF, Action For Children and NSPCC. She led the strategic development of fundraising at Abertay University. She has significant experience of Learning and Development and is a qualified business coach with a passion for developing fundraisers skills. Loretta is highly motivated by the transformational power of fundraising.
               %ul.links
                 %li
                   = link_to "https://twitter.com/LorettaBMThink" do
@@ -204,21 +204,7 @@
               %h3
                 = link_to "Karlo Soriano", "https://twitter.com/kntsoriano"
               .handle @kntsoriano
-              %p Karlo works on the website part of Exercism. He has created most of the website's interactive frontend content in React, and contributed to much of the Rails backend platform. In his spare times he is a semi-professional drummer and music producer. Karlo is also part of the team at #{link_to 'Kaido', 'https://kaido.org'}.
-              %ul.links
-                %li
-                  = link_to "http://kntsoriano.me/" do
-                    = graphical_icon "link"
-                    %span Karlo's personal site
-                %li
-                  = link_to "https://github.com/kntsoriano" do
-                    = graphical_icon "external-site-github"
-                    %span GitHub
-
-                %li
-                  = link_to "https://twitter.com/kntsoriano" do
-                    = graphical_icon "external-site-twitter"
-                    %span Twitter
+              %p Karlo worked on the website part of Exercism. He created most of the website's interactive frontend for v3, and contributed to much of the Rails backend platform.
 
       %section.grid.gird-cols-1.md:grid-cols-3.gap-56
         .community-team
