Make links external

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -43,22 +43,22 @@
             = image_tag "team/katrina.jpg", alt: "An image of Katrina", class: "avatar"
             .details
               %h3
-                = link_to "Katrina Owen", "https://kytrinyx.com"
+                = link_to "Katrina Owen", "https://kytrinyx.com", target: "_blank", rel: 'noopener'
               .handle @kytrinyx
               %p The original creator of Exercism. Co-author of #{link_to '99 Bottles of OOP', 'https://sandimetz.com/99bottles'}. Polyglot developer and Ruby Hero award winner, with a degree in Molecular Biology. Cares deeply about open-source and contributes to several projects outside of Exercism.
               %ul.links
                 %li
-                  = link_to "https://kytrinyx.com" do
+                  = link_to "https://kytrinyx.com", target: "_blank", rel: 'noopener' do
                     = graphical_icon "link"
                     %span Katrina's Personal Site
 
                 %li
-                  = link_to "https://github.com/kytrinyx" do
+                  = link_to "https://github.com/kytrinyx", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
                 %li
-                  = link_to "https://twitter.com/kytrinyx" do
+                  = link_to "https://twitter.com/kytrinyx", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
 
@@ -66,22 +66,22 @@
             = image_tag "team/jeremy-walker.jpg", alt: "An image of Jeremy Walker", class: "avatar"
             .details
               %h3
-                = link_to "Jeremy Walker", "https://ihid.info"
+                = link_to "Jeremy Walker", "https://ihid.info", target: "_blank", rel: 'noopener'
               .handle @iHiD
               %p Co-founder and CEO of Exercism. Jeremy is an entrepreneur and software developer, who's passionate about equality and opportunity. He has co-founded various organisations, including Meducation, Wondr Medical, and #{link_to 'Kaido', 'https://kaido.org'}.
               %ul.links
                 %li
-                  = link_to "https://ihid.info" do
+                  = link_to "https://ihid.info", target: "_blank", rel: 'noopener' do
                     = graphical_icon "link"
                     %span Jeremy's Personal Site
 
                 %li
-                  = link_to "https://github.com/iHiD" do
+                  = link_to "https://github.com/iHiD", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
                 %li
-                  = link_to "https://twitter.com/iHiD" do
+                  = link_to "https://twitter.com/iHiD", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
 
@@ -96,88 +96,88 @@
             = image_tag "team/erik.jpg", alt: "An image of Erik Schierboom", class: "avatar"
             .details
               %h3
-                = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom"
+                = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noopener'
               .handle @erikschierboom
               %p Erik works full-time for Exercism, building the software and infrastructure that powers the open-source elements of the platform, and ensuring each track a joy to work with. He was a top Exercism volunteer before joining full-time. He is a polyglot developer who loves to learn new languages.
               %ul.links
                 %li
-                  = link_to "https://www.erikschierboom.com" do
+                  = link_to "https://www.erikschierboom.com", target: "_blank", rel: 'noopener' do
                     = graphical_icon "link"
                     %span Erik's personal site
                 %li
-                  = link_to "https://github.com/erikschierboom" do
+                  = link_to "https://github.com/erikschierboom", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
                 %li
-                  = link_to "https://twitter.com/erikschierboom" do
+                  = link_to "https://twitter.com/erikschierboom", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
           .person
             = image_tag "team/taiyab.jpg", alt: "An image of Taiyab Raja", class: "avatar"
             .details
               %h3
-                = link_to "Taiyab Raja", "https://taiyab.co.uk/"
+                = link_to "Taiyab Raja", "https://taiyab.co.uk/", target: "_blank", rel: 'noopener'
               .handle @taiyab
               %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
               %ul.links
                 %li
-                  = link_to "https://taiyab.co.uk" do
+                  = link_to "https://taiyab.co.uk", target: "_blank", rel: 'noopener' do
                     = graphical_icon "link"
                     %span Taiyab Raja's Portfolio
                 %li
-                  = link_to "https://twitter.com/taiyab" do
+                  = link_to "https://twitter.com/taiyab", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/taiyab" do
+                  = link_to "https://github.com/taiyab", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/loretta.jpg", alt: "An image of Loretta Murray", class: "avatar"
             .details
               %h3
-                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink"
+                = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener'
               .handle @LorettaExercism
               %p Loretta is the Head of Partnerships and Fundraising, with a track record of successful strategic and operational delivery across complex charities, including Cancer Research UK, UNICEF, Action For Children and NSPCC. She led the strategic development of fundraising at Abertay University. She has significant experience of Learning and Development and is a qualified business coach with a passion for developing fundraisers skills. Loretta is highly motivated by the transformational power of fundraising.
               %ul.links
                 %li
-                  = link_to "https://twitter.com/LorettaBMThink" do
+                  = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/LorettaExercism" do
+                  = link_to "https://github.com/LorettaExercism", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/jonathan.jpg", alt: "An image of Jonathan Middleton", class: "avatar"
             .details
               %h3
-                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton"
+                = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener'
               .handle @jonathandmiddleton
               %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
               %ul.links
                 %li
-                  = link_to "https://twitter.com/jonny_middleton" do
+                  = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/jonathandmiddleton" do
+                  = link_to "https://github.com/jonathandmiddleton", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
           .person
             = image_tag "team/aron.jpg", alt: "An image of Aron Demeter", class: "avatar"
             .details
               %h3
-                = link_to "Áron Demeter", "https://github.com/dem4ron"
+                = link_to "Áron Demeter", "https://github.com/dem4ron", target: "_blank", rel: 'noopener'
               .handle @dem4ron
               %p Áron works on the front-end of Exercism. He is a self-taught developer who gets excited about discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he enjoys spending time with his family, learning new languages on Exercism or listening to an opera.
               %ul.links
                 %li
-                  = link_to "https://twitter.com/d4ron1" do
+                  = link_to "https://twitter.com/d4ron1", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-twitter"
                     %span Twitter
                 %li
-                  = link_to "https://github.com/dem4ron" do
+                  = link_to "https://github.com/dem4ron", target: "_blank", rel: 'noopener' do
                     = graphical_icon "external-site-github"
                     %span GitHub
 
@@ -201,9 +201,7 @@
           .person
             = image_tag "team/karlo.jpg", alt: "An image of Karlo Soriano", class: "avatar"
             .details
-              %h3
-                = link_to "Karlo Soriano", "https://twitter.com/kntsoriano"
-              .handle @kntsoriano
+              %h3 Karlo Soriano
               %p Karlo worked on the website part of Exercism. He created most of the website's interactive frontend for v3, and contributed to much of the Rails backend platform.
 
       %section.grid.gird-cols-1.md:grid-cols-3.gap-56
