Don't nest links

--- a/app/css/pages/exercise-show.css
+++ b/app/css/pages/exercise-show.css
@@ -38,6 +38,9 @@
 
         & .progressed-concepts {
             @apply mb-16;
+            & .c-react-wrapper-student-exercise-status-dot {
+                @apply ml-8;
+            }
         }
         & .c-prominent-link {
             @apply mb-24;
