--- a/app/views/donations/index.html.haml
+++ b/app/views/donations/index.html.haml
@@ -11,12 +11,13 @@
         We care about social mobility and bringing underrepresented communities into tech.
         %br
         %span.font-medium
-          You can learn more about
-          = link_to 'Our Mission,', about_path, class: link_class
-          = link_to 'Roadmap', contributing_root_path, class: link_class
+          You can learn more about our
+          = link_to 'Mission,', about_path, class: link_class
+          /= link_to 'Roadmap', contributing_root_path, class: link_class
+          = link_to 'Impact', impact_about_path, class: link_class
           and
-          = link_to 'Team', team_about_path, class: link_class
-
+          = succeed('.') do
+            = link_to 'Team', team_about_path, class: link_class
 
       .summary.lg-container.hidden.md:flex.items-center
         .item
@@ -58,41 +59,45 @@
 
       %section.info-section.pt-48.lg:pt-0
         %h2.text-h2.mb-32 Here’s what you can do to support us.
-        .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
+        .flex.flex-row.shadow-baseZ1.p-24.rounded-16.bg-white.mb-16.border-2.border-gradient.relative
           = graphical_icon "money-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Donate
-            .text-prose.text-textColor5{ class: 'mr-[80px]' }
-              Use the donation box on this page to make a cash donation to Exercism. Every bit matters. We’ve already got to where we are with less than $500,000 total.
+            .text-prose.text-textColor5{ class: 'mr-[40px]' }
+              Support us finanically using the donation box
+              %span.hidden.md:inline to the right.
+              %span.inline.md:hidden above.
+              Every dollar helps us keep us independent, advert-free and able to grow, so please support us if you can! 💜
+          .hidden.lg:flex.self-center.absolute{ class: 'text-[70px] right-[-40px]' }
+            👉🏼
 
-        = link_to(contributing_root_path) do
-          .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
-            = graphical_icon "code-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
-            .flex.flex-col.mr-32
-              .text-h4.mb-4 Code Contribution
-              .text-prose.text-textColor5
-                Exercism is open source, and takes code contributions from the community. There are 768 tasks waiting for help. Browse through them by language, task type, and a whole lot more to see if you can help build Exercism.
-            .flex.items-center.p-12
-              = graphical_icon "chevron-right", css_class: 'h-[24px] w-[24px]'
+        = link_to contributing_root_path, class: "flex flex-row shadow-base p-24 rounded-16 bg-white mb-16 hover:shadow-baseZ1" do
+          = graphical_icon "code-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
+          .flex.flex-col.mr-32
+            .text-h4.mb-4 Code Contribution
+            .text-prose.text-textColor5
+              Exercism is open source, and takes code contributions from the community. There are 768 tasks waiting for help. Browse through them by language, task type, and a whole lot more to see if you can help build Exercism.
+          .flex.items-center.p-12
+            = graphical_icon "chevron-right", css_class: 'h-[24px] w-[24px]'
 
         .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
           = graphical_icon "organisation-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Get your company involved
-            .text-prose.text-textColor5{ class: 'mr-[80px]' }
-              Does your company support not-for-profit organisations? Do you have a matched giving scheme at work? We’d love to chat to you to understand how your company could support us.
-              %br
-              Drop Loretta an email at
-              = link_to "fundraising@exercism.org.", "mailto:fundraising@exercism.org", class: link_class
+            .text-prose.text-textColor5
+              Does your company support not-for-profits or charities? Do you have a matched giving scheme at work? We’d love to chat to you to understand how your company could support us. Please
+              drop us an email at
+              = link_to "fundraising@exercism.org", "mailto:fundraising@exercism.org", class: "text-lightBlue font-medium underline"
+              and we'll explore further!
 
         .flex.flex-row.shadow-base.p-24.rounded-16.bg-white.mb-16
           = graphical_icon "social-contribution", category: :graphics, css_class: "h-[96px] w-[96px] mr-20"
           .flex.flex-col
             .text-h4.mb-4 Love Exercism? Tell others about us!
-            .text-prose.text-textColor5{ class: 'mr-[80px]' }
+            .text-prose.text-textColor5
               Follow us on
-              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noopener', class: link_class
-              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noopener', class: link_class
+              = link_to 'Twitter,', 'https://twitter.com/exercism_io', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
+              = link_to 'GitHub', 'https://github.com/exercism', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
               and
-              = link_to 'LinkedIn.', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noopener', class: link_class
-              Tweet and post about us.
+              = link_to 'LinkedIn', 'https://www.linkedin.com/company/exercism/', target: "_blank", rel: 'noopener', class: "text-lightBlue font-medium underline"
+              then share our posts, and create your own! We try to share everything we see 🙂
