--- a/app/views/tracks/exercises/show/_concepts_section.html.haml
+++ b/app/views/tracks/exercises/show/_concepts_section.html.haml
@@ -5,8 +5,9 @@
   .progressed-concepts
     - exercise.taught_concepts.includes(:concept_exercises, :practice_exercises).each do |concept|
       .concept
-        = render ViewComponents::ConceptIcon.new(concept, :medium)
-        .name= concept.name
+        = link_to Exercism::Routes.track_concept_path(track, concept), class: "flex items-center" do
+          = render ViewComponents::ConceptIcon.new(concept, :medium)
+          .name= concept.name
         .exercises
           - user_track.concept_exercises_for_concept(concept).each do |exercise|
             = ReactComponents::Student::ExerciseStatusDot.new(exercise, user_track)
