--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -138,7 +138,7 @@
               %h3
                 = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener'
               .handle @LorettaExercism
-              %p Loretta is the Head of Partnerships and Fundraising, with a track record of successful strategic and operational delivery across complex charities, including Cancer Research UK, UNICEF, Action For Children and NSPCC. She led the strategic development of fundraising at Abertay University. She has significant experience of Learning and Development and is a qualified business coach with a passion for developing fundraisers skills. Loretta is highly motivated by the transformational power of fundraising.
+              %p Loretta is highly motivated by the transformational power of fundraising, and has a track record of successful strategic and operational delivery across complex organisations, including Cancer Research UK, UNICEF, NSPCC. and Abertay University. She is a qualified business coach with a passion for developing fundraisers skills.
               %ul.links
                 %li
                   = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener' do
