--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -44,8 +44,8 @@
             .details
               %h3
                 = link_to "Katrina Owen", "https://kytrinyx.com", target: "_blank", rel: 'noopener'
-              .handle @kytrinyx
-              %p The original creator of Exercism. Co-author of #{link_to '99 Bottles of OOP', 'https://sandimetz.com/99bottles'}. Polyglot developer and Ruby Hero award winner, with a degree in Molecular Biology. Cares deeply about open-source and contributes to several projects outside of Exercism.
+              .handle Co-founder &amp; Director
+              %p Katrina is the original creator of Exercism. She is co-author of #{link_to '99 Bottles of OOP', 'https://sandimetz.com/99bottles'}. Polyglot developer and Ruby Hero award winner, with a degree in Molecular Biology. Cares deeply about open-source and contributes to several projects outside of Exercism.
               %ul.links
                 %li
                   = link_to "https://kytrinyx.com", target: "_blank", rel: 'noopener' do
@@ -67,8 +67,8 @@
             .details
               %h3
                 = link_to "Jeremy Walker", "https://ihid.info", target: "_blank", rel: 'noopener'
-              .handle @iHiD
-              %p Co-founder and CEO of Exercism. Jeremy is an entrepreneur and software developer, who's passionate about equality and opportunity. He has co-founded various organisations, including Meducation, Wondr Medical, and #{link_to 'Kaido', 'https://kaido.org'}.
+              .handle Co-founder &amp; CEO
+              %p Jeremy is an entrepreneur and software developer, who's passionate about equality and opportunity. He has co-founded various organisations, including Meducation, Wondr Medical, and #{link_to 'Kaido', 'https://kaido.org'}, and holds a patent for AI used in heart surgery.
               %ul.links
                 %li
                   = link_to "https://ihid.info", target: "_blank", rel: 'noopener' do
@@ -97,7 +97,7 @@
             .details
               %h3
                 = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noopener'
-              .handle @erikschierboom
+              .handle Head of Open Source
               %p Erik works full-time for Exercism, building the software and infrastructure that powers the open-source elements of the platform, and ensuring each track a joy to work with. He was a top Exercism volunteer before joining full-time. He is a polyglot developer who loves to learn new languages.
               %ul.links
                 %li
@@ -117,7 +117,7 @@
             .details
               %h3
                 = link_to "Taiyab Raja", "https://taiyab.co.uk/", target: "_blank", rel: 'noopener'
-              .handle @taiyab
+              .handle UX/UI Designer
               %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
               %ul.links
                 %li
@@ -137,8 +137,8 @@
             .details
               %h3
                 = link_to "Loretta Murray", "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener'
-              .handle @LorettaExercism
-              %p Loretta is highly motivated by the transformational power of fundraising, and has a track record of successful strategic and operational delivery across complex organisations, including Cancer Research UK, UNICEF, NSPCC. and Abertay University. She is a qualified business coach with a passion for developing fundraisers skills.
+              .handle Head of Fundraising and Partnerships
+              %p Loretta is motivated by the transformational power of fundraising, and has a track record of successful strategic and operational delivery across complex organisations including Cancer Research UK, UNICEF, NSPCC. and Abertay University. She is a qualified business coach with a passion for developing fundraisers' skills.
               %ul.links
                 %li
                   = link_to "https://twitter.com/LorettaBMThink", target: "_blank", rel: 'noopener' do
@@ -153,8 +153,8 @@
             .details
               %h3
                 = link_to "Jonathan Middleton", "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener'
-              .handle @jonathandmiddleton
-              %p Taiyab is a seasoned UI/UX designer responsible for designing Exercism v3. If you think Exercism looks and feels awesome, he’s the man to thank. Taiyab enjoys all things startups, design and entrepreneurship.
+              .handle Community Manager
+              %p Jonathan loves to help others grow and find their unique space in the world. With an entrepreneurial streak and multi-cultural background, he loves to listen and build deep and lasting community. Away from work he spends most of his time being father to his adorable but chaotic daughter.
               %ul.links
                 %li
                   = link_to "https://twitter.com/jonny_middleton", target: "_blank", rel: 'noopener' do
@@ -169,7 +169,7 @@
             .details
               %h3
                 = link_to "Áron Demeter", "https://github.com/dem4ron", target: "_blank", rel: 'noopener'
-              .handle @dem4ron
+              .handle Front-end Developer
               %p Áron works on the front-end of Exercism. He is a self-taught developer who gets excited about discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he enjoys spending time with his family, learning new languages on Exercism or listening to an opera.
               %ul.links
                 %li
