Strip off duplicate title

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -170,7 +170,7 @@
               %h3
                 = link_to "Áron Demeter", "https://github.com/dem4ron", target: "_blank", rel: 'noopener'
               .handle Front-end Developer
-              %p Áron works on the front-end of Exercism. He is a self-taught developer who gets excited about discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he enjoys spending time with his family, learning new languages on Exercism or listening to an opera.
+              %p Áron is a self-taught developer who gets excited about discovering interrelations between things. He has a Master's degree in classical piano performance. In his freetime he enjoys spending time with his family, learning new languages on Exercism or listening to an opera.
               %ul.links
                 %li
                   = link_to "https://twitter.com/d4ron1", target: "_blank", rel: 'noopener' do
