--- a/app/views/tracks/about.html.haml
+++ b/app/views/tracks/about.html.haml
@@ -54,7 +54,7 @@
         .info.mb-32.md:mb-0
           .c-textual-content.--large
             %h2 About #{@track.title}
-            = ReactComponents::Common::Expander.new(Markdown::Parse.(@track.about), button_text_compressed: "Read more on #{@track.title}", button_text_expanded: "Read less")
+            = ReactComponents::Common::Expander.new(Markdown::Parse.(@track.about), content_is_safe: true, button_text_compressed: "Read more on #{@track.title}", button_text_expanded: "Read less")
         %pre
           %code{ class: "lang-#{@track.highlightjs_language}" }
             = @track.snippet
