Update bio of Erik

--- a/app/views/about/team.html.haml
+++ b/app/views/about/team.html.haml
@@ -98,7 +98,7 @@
               %h3
                 = link_to "Erik Schierboom", "https://twitter.com/ErikSchierboom", target: "_blank", rel: 'noopener'
               .handle Head of Open Source
-              %p Erik works full-time for Exercism, building the software and infrastructure that powers the open-source elements of the platform, and ensuring each track a joy to work with. He was a top Exercism volunteer before joining full-time. He is a polyglot developer who loves to learn new languages.
+              %p Erik is a polyglot developer who loves learning new languages. He builds the software and infrastructure that powers the open-source elements of the platform, ensuring each track is a joy to work with. He was a top Exercism volunteer before joining full-time.
               %ul.links
                 %li
                   = link_to "https://www.erikschierboom.com", target: "_blank", rel: 'noopener' do
