--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -10,7 +10,7 @@
       %h1.text-h0.mb-16 Exercism
       %hr.c-divider.mb-16
       %p.text-p-3xlarge.text-textColor2.mb-40.text-center
-        We're building the most effective, intrinsically rewarding, and friendly place to both learn and master programming. And its free.
+        We’re building a place where anyone can learn and master programming for free, without ever feeling lost or stupid.
       .grid.grid-1.md:grid-cols-2-auto.gap-24
         = link_to donate_path, class: 'btn-l btn-primary' do
           Donate to Exercism
