--- a/app/views/mentoring/automation/edit.html.haml
+++ b/app/views/mentoring/automation/edit.html.haml
@@ -1,1 +1,1 @@
-= render ReactComponents::Mentoring::Representations::Representation.new(@current_user, @representation, @examples)
+= render ReactComponents::Mentoring::Representations::Representation.new(@current_user, @representation, @examples, @source_params)
