--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -15,4 +15,8 @@
     .filter-lightGold {
         filter: var(--lightGold-filter);
     }
+
+    .filter-orange {
+        filter: var(--orange-filter);
+    }
 }
