Add approach show page

--- a/app/css/application.postcss.css
+++ b/app/css/application.postcss.css
@@ -175,6 +175,7 @@
 @import "./pages/notifications";
 @import "./pages/blog";
 @import "./pages/blog-post";
+@import "./pages/approach";
 @import "./pages/donate";
 @import "./pages/landing";
 @import "./pages/settings";
