--- a/app/views/tracks/approaches/show.html.haml
+++ b/app/views/tracks/approaches/show.html.haml
@@ -1,1 +1,55 @@
-SHOW PAGE
+#page-approaches-show.pb-80
+  %header.pt-24.md:pt-48.pb-64.md:pb-128
+    .md-container.flex.flex-col.md:flex-row-reverse.items-center.c-shapes.c-shapes-1{ class: 'gap-[48px]' }
+      .py-8.px-24.bg-gray.border-2.border-gradient.rounded-100.flex.flex-row.items-center{ class: "h-[68px]" }
+        = graphical_icon "balloons", category: :graphics, css_class: "h-[40px] mr-12"
+        = graphical_icon "building", category: :graphics, css_class: "h-48 mr-12"
+        -# = track_icon css_class: "h-[40px] w-[40px] mr-12"
+          . = exercise_icon "amusement-park", css_class: "h-48 mr-12"
+        .flex.flex-col
+          .text-h5.whitespace-nowrap Amusement park
+          .textColor-6.font-normal.leading-150.text-16 Csharp
+
+      .block.flex-grow
+        %h1.text-h0.mb-12.md:mb-18= @approach.title
+  .md-container.mb-32.md:mb-48
+    %article.shadow-lgZ1.bg-backgroundColorA.rounded-8
+      .share-bar.border-b-1.border-borderColor6.py-12.md:py-16.px-24.md:px-32.flex.items-center
+        = graphical_icon "lightbulb", category: :graphics, css_class: "main-graphic hidden md:block"
+        .info.md:hidden
+          %h3.text-h6.mb-2 Find this approach useful?
+          %p.text-p-small Share it around!
+        .info.hidden.md:block.mr-auto
+          %h3.text-h5.mb-2 Find the approach interesting or useful?
+          %p.text-p-base Share it around and have others benefit too!
+
+        = render ViewComponents::Blog::SharePostButton.new(@approach)
+
+      .p-16.md:py-32.md:px-40.flex.flex-col
+
+        .c-textual-content.--large
+          = raw @approach.content_html
+
+        .published-at.mt-24.pt-16.border-t-1.border-borderColor6.text-16.text-textColor6.leading-150.md:self-start.mb-28
+          = format_date(@approach.published_at)
+          &middot;
+          Found it useful?
+          = render ViewComponents::Blog::SharePostLink.new(@approach)
+
+  .md-container.flex.flex-col
+    .flex.items-center.justify-center.mb-32
+      = graphical_icon "dig-deeper-gradient", css_class: "h-[32px] mr-24"
+      .flex.flex-col.items-center
+        %h2.text-h3.font-bold.mb-4 Other Approaches to Asteroid Exploration Co.
+        .text-p-base.text-textColor6 Other ways our community solved this exercise
+
+    .grid.gap-24.grid-cols-1.sm:grid-cols-2.md:grid-cols-3.mb-32
+      - 3.times do
+        .bg-white.shadow-base.rounded-8.px-20.py-16.mb-16
+          %pre.border-1.border-lightGray.rounded-8.p-16.mb-16
+            %code.block.overflow-hidden.csharp{ class: 'h-[134px]', style: "text-overflow:ellipsis" }
+              string something = "something";
+          %h5.text-h5.mb-2 Using Forwardable
+          %p.text-p-base.text-textColor6.mb-12
+            Explore how to use the Forwardable module and its def_delegator and
+            def_delegators methods to use delegation to solve Bob
