--- a/app/views/tracks/approaches/index.html.haml
+++ b/app/views/tracks/approaches/index.html.haml
@@ -3,4 +3,4 @@
 
 #page-approaches-index
   = render ViewComponents::Track::ExerciseHeader.new(@exercise, @solution, @user_track, :approaches)
-  INDEX PAGE!!
+  = render ReactComponents::Track::Approaches.new
