--- a/app/views/admin/community_videos/show.html.haml
+++ b/app/views/admin/community_videos/show.html.haml
@@ -3,13 +3,14 @@
 
   .text-h6.mb-8 Title: #{@community_video.title}
   .text-h6.mb-8 Status: #{@community_video.status.to_s.titleize}
-  .text-h6.mb-8 Track: #{@community_video.track&.name}
+  .text-h6.mb-8 Track: #{@community_video.track&.title}
   .text-h6.mb-8 Exercise: #{@community_video.exercise&.title}
   - submitted_by = @community_video.submitted_by
   .text-h6.mb-8 Submitted By: #{submitted_by.name} | @#{submitted_by.handle} | ##{submitted_by.id}
 
   - author = @community_video.author
-  .text-h6.mb-8 Author: #{author.name} | @#{author.handle} | ##{author.id}
+  - if author.present?
+    .text-h6.mb-8 Author: #{author.name} | @#{author.handle} | ##{author.id}
 
   %p Aron - put the other things on this model here...
 
