--- a/app/views/admin/community_videos/edit.html.haml
+++ b/app/views/admin/community_videos/edit.html.haml
@@ -5,4 +5,4 @@
   %div
     = link_to "Show this community video", [:admin, @community_video]
     |
-    link_to "Back to community videos", admin_community_videos_path
+    = link_to "Back to community videos", admin_community_videos_path
