--- a/app/css/ui-kit/filters.css
+++ b/app/css/ui-kit/filters.css
@@ -19,4 +19,16 @@
     .filter-orange {
         filter: var(--orange-filter);
     }
+
+    /* I don't think we need duplicates of all the filters - 
+    one here, on in colors.css, or do we? */
+    .filter-lightBlue {
+        filter: invert(25%) sepia(55%) saturate(3687%) hue-rotate(223deg)
+            brightness(94%) contrast(93%);
+    }
+
+    .filter-textColor1 {
+        filter: invert(10%) sepia(35%) saturate(3157%) hue-rotate(231deg)
+            brightness(99%) contrast(113%);
+    }
 }
