--- a/app/views/tracks/build.html.haml
+++ b/app/views/tracks/build.html.haml
@@ -1,3 +1,51 @@
 #page-tracks-build
 
-  .lg-container.test hello
+  .lg-container.grid.grid-cols-3.gap-48
+    .col-span-2
+      %h1.text-h1.mb-12
+        %span{ class: "px-12 bg-[url(graphics/impact-highlight.svg)] bg-[length:100%_100%]" } 25,000
+        students have developed their Elixir skills.
+      .grid.grid-cols-3
+        .report-stat
+          .stat-name
+            Students
+            = graphical_icon "info-circle"
+          .current-number 25,645
+          .growth +939 per day
+        .report-stat
+          .stat-name
+            Submissions
+            = graphical_icon "info-circle"
+          .current-number 89,501
+          .growth +2,569 per day
+        .report-stat
+          .stat-name
+            Mentoring Discussions
+            = graphical_icon "info-circle"
+          .current-number 580
+          .growth +10 per day
+
+
+
+    .col-span-1
+      .rounded-8.p-24.shadow-baseZ1
+        .flex.items-center.mb-12
+          = graphical_icon "team-idea", css_class: "h-[24px] w-[24px] filter-textColor1 mr-16"
+          .label-large.mr-16 Volunteers
+          .count-bubble 172
+
+        - 2.times do
+          .contributor-credit-block
+            .contributor
+              = image_tag "team/erik.jpg", alt: "A photo of Erik"
+              ErikSchierboom
+            = render ViewComponents::Reputation.new(300, flashy: true, size: :small)
+        .rounded-8.py-16.px-20.bg-backgroundColorG
+          %h6.text-h6.leading-150.mb-4 We 💙 our volunteers
+          %p.text-textColor5.leading-150.text-14.mb-4
+            Exercism relies on open-source volunteers to build our language tracks and mentor students.
+          = link_to "https://github.com", class: "text-lightBlue font-semibold flex items-center" do
+            %span.mr-8 Become an Exercism Volunteer
+            = graphical_icon "arrow-right", css_class: "h-[14px] w-[14px] filter-lightBlue"
+
+
