--- a/app/views/about/impact.html.haml
+++ b/app/views/about/impact.html.haml
@@ -165,7 +165,7 @@
       .text-48.leading-130.mb-8 🚀
       %h2.text-h1.mb-12 Become rocket fuel for our mission
       %p.text-p-2xlarge.mb-36.text-center.text-textColor6.font-medium
-        We’ve built everything for under $500,000. Imagine what we could do with
+        We&apos;ve built everything for under $500,000. Imagine what we could do with
         more significant funding! Could you be the one to make it happen?
       .flex.flex-col.border.border-2.border-gradient.rounded-16.px-40.py-24.shadow-smZ1
         .flex.flex-col.items-center.mx-auto.mb-24.md:flex-row
