--- a/app/views/tracks/build.html.haml
+++ b/app/views/tracks/build.html.haml
@@ -34,16 +34,16 @@
             .tooling-status-label Building
             .tooling-status-group
               .tooling-status--healthy
-                = graphical_icon "educative-toys-alphabet"
+                = graphical_icon "syllabus"
               .tooling-status--dead
-                = graphical_icon "fitness-weights"
+                = graphical_icon "practice-exercises"
               .tooling-status--critical
-                = graphical_icon "conversation-chat"
+                = graphical_icon "representer"
           .flex.flex-col.pl-40.border-l-1.border-borderLight
             .tooling-status-label Outreach & Activity
             .tooling-status-group
               .tooling-status--needs-attention
-                = graphical_icon "server-refresh"
+                = graphical_icon "test-runner"
 
 
       .border-2.border-gradient.rounded-12.px-32.py-24.items-center.flex.shadow-smZ1.mb-32
