Working on fixing tests

--- a/app/views/mailers/notifications_mailer/analysis_feedback_added.text.haml
+++ b/app/views/mailers/notifications_mailer/analysis_feedback_added.text.haml
@@ -1,6 +1,5 @@
 Hi #{@user.handle},
 \
-New feedback is added to iteration (##{@iteration.idx}) of your solution to #{@exercise.title} on the #{@track.title} track.
-We #{@emphasis} recommend taking a look.
+New feedback is added to iteration (##{@iteration.idx}) of your solution to #{@exercise.title} on the #{@track.title} track. We #{@emphasis} recommend taking a look.
 \
 Go to the iteration: #{track_exercise_iterations_url(@track, @exercise)}
